syntax = "proto3";

option go_package = "grpc/proto/account";

package account;

service Account {
    rpc GetAccountInfo (GetAccountInfoReq) returns (GetAccountInfoResp);
    rpc NewAccountInfo (NewAccountInfoReq) returns (NewAccountInfoResp);
    rpc DeleteAccount (DeleteAccountReq) returns (DeleteAccountResp);
}

message GetAccountInfoReq {
    string platform_id = 1;
    string account_id = 2;
}

message GetAccountInfoResp {
    string platform_id = 1;
    string account_id = 2;
    string account_name = 3;
    string email = 4;
    string phone = 5;
    string created_at = 6; // ISO 8601 format
    string updated_at = 7; // ISO 8601 format
}

message NewAccountInfoReq {
    string platform_id = 1;
    string account_name = 2;
    string email = 3;
    string phone = 4;
}

message NewAccountInfoResp {
    string platform_id = 1;
    string account_id = 2; // auto-generated
    string account_name = 3;
    string email = 4;
    string phone = 5;
    string created_at = 6; // ISO 8601 format
}

message DeleteAccountReq {
    string platform_id = 1;
    string account_id = 2;
}

message DeleteAccountResp {
  string result = 1;
}